--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,10 +19,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+    
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  fluro: "^1.5.1"
 
 dev_dependencies:
   flutter_test:
