--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   fluro: "^1.5.1"
+  rxdart: ^0.22.0
+  dio: ^3.0.5
+  path_provider: ^1.4.4
+  cookie_jar: ^1.0.0
+  dio_cookie_manager: ^1.0.0
 
 dev_dependencies:
   flutter_test:
