--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,11 +29,13 @@ dependencies:
   path_provider: ^1.4.4
   cookie_jar: ^1.0.0
   dio_cookie_manager: ^1.0.0
+  json_annotation: ^2.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  build_runner: ^1.0.0
+  json_serializable: ^2.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
