--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cookie_jar: ^1.0.0
   dio_cookie_manager: ^1.0.0
   json_annotation: ^2.0.0
+  cached_network_image: ^1.1.3
 
 dev_dependencies:
   flutter_test:
