--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   dio_cookie_manager: ^1.0.0
   json_annotation: ^2.0.0
   cached_network_image: ^1.1.3
+  flutter_easyrefresh: ^2.0.4
 
 dev_dependencies:
   flutter_test:
